--- a/style.css
+++ b/style.css
@@ -1,33 +1,33 @@
 body
- {  background:url(img.jpg)no-repeat;
-    background-size: cover;
+ {  background: url(img.jpg) no-repeat;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     margin-top: 5%;
     align-items: center;
-    
-  }
-  h2 ,p
-  {
-      text-align: center;
-  }
-form
-{
-  border: 3px solid purple;
-  display: inline-block;
-  align : center;
-  width : 450px;
+ }
+   
+h2{
+    text-align: center;
 }
+form {border: 3px solid purple;
+    
+    display: inline-block;
+    align : center;
+    width : 450px;
+    
+}
+
 input[type=text], input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid rgba(128, 128, 128, 0.354);
+  border: 1px solid whitesmoke;
   box-sizing: border-box;
-  background-color: white;
+  background-color: whitesmoke;
 }
+
 button {
   background-color:blueviolet;
   color: white;
@@ -37,69 +37,43 @@ button {
   cursor: pointer;
   width: 100%;
 }
+
 button:hover {
   opacity: 0.8;
 }
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
-  span.lnk {
+  span.psw {
      display: block;
      float: none;
-     
   }
-  
-}
-
-.btn {
-  padding: 8px 20px;
-  margin: 7px 0;
-  border: 2px solid white;
-  border-radius: 8px;
-  background: none;
-  color: white;
-  cursor: pointer;
-}
-
-.container , span.lnk
-{
-  padding : 1em;
-
-}
-div.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  background-color: yellow;
-  padding: 50px;
-  font-size: 20px;
-} 
-.home .body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background:url(img.jpg)no-repeat;
-  background-size: cover;
-}
-  .topnav {
-  overflow: hidden;
-  background-color: #333;
-  background-size: cover;
-}
-
- .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
- .topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+  .cancelbtn {
+     width: 100%;
+  }
 }
